# das2py

./: .gitignore  INSTALL.txt  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
buildfiles/: AltBuild.md  Darwin.mak  Linux.mak  Makefile  ReadMe.md  Windows.mak  das2py.spec  du_setup.py
buildfiles/conda/: ReadMe.md  bld.bat  build.sh  description.html  description.md  meta.yaml
buildfiles/pypi/: build_wheels.md
buildfiles/rpm/: README.md
das2/: __init__.py  auth.py  cdf.py  cli.py  container.py  das-basic-doc-ns-v3.0.xsd  das-basic-stream-ns-v3.0.xsd  das-basic-stream-v2.2.xsd  das-basic-stream-v3.0.xsd  dastime.py  dataset.py  mpl.py  node.py  pkt.py  reader.py  source.py  streamsrc.py  toml.py  util.py  verify.py
das2/pycdf/: __init__.py
das2/xsd/: das-basic-doc-ns-v3.0.xsd  das-basic-doc-v3.0.xsd  das-basic-stream-ns-v3.0.xsd  das-basic-stream-v2.2.xsd  das-basic-stream-v3.0.xsd  das-stream-v2.2.xsd  das2.2-mostly-strict.xsd  das2.3-basic-strict.xsd  das2.3-basic.xsd
doc/: LEGACY.md
examples/: ex01_source_queries.py  ex02_galileo_pws_spectra.py  ex03_cassini_rpws_multimode.py  ex04_voyager_pws_query_by_time.py  ex05_mex_marsis_query_by_angle.py  ex06_astro_lwa1_multiscale.py  ex07_cassini_rpws_query_opts.py  ex08_juno_waves_wfrm_to_cdf.py  ex09_cassini_fce_ephem_ticks.py  ex09_van_allen_probes_mag_ephem.py  ex10_manual_datasets.py  ex11_catalog_listings.py
examples/c_module/: galileo_pws_e-survey.py  juno_hfwbr_cdf.py
makefiles/: Darwin.mak  Linux.mak  Windows.mak
makefiles/conda/: bld.bat  build.sh  meta.yaml
makefiles/rpm/: README.md  das2py.spec
notes/: INSTALL.txt
scripts/: cdf_dump  das2_validate  das2_verify  das_cdf_info  das_verify
sphinx/: Makefile  make.bat
sphinx/source/: ex_02.rst  ex_04.rst  ex_08.rst  ex_10.rst  ex_11.rst  examples.rst  modules.rst  ref_hi.rst  ref_lo.rst
sphinx/source/_templates/: logo-image.html
sphinx_doc/source/: conf.py  das2.rst  ex_01.rst  ex_03.rst  index.rst  ref_lo.rst
sphinx_doc/source/_static/: ex03_terse.py
src/: _das2.c  py_builder.c  py_builder.h  py_catalog.h  py_dft.h
test/: Survey.toml  Survey2.dsdf  Survey_pre.toml  TestCatalog.py  TestDasTime.py  TestDataset.py  TestRead.py  TestSort.py  TestSortMinimal.py  TestSource.py  aggregation.toml  basic_rates.dsdf  das2_dastime_output1.txt  das2_dastime_test1.py  das2_dastime_test1.sh  das2_verify_test.sh  datasource.toml  ex05_waveform_extra.d3t  ex05_yset_custom_2.3.d2t  ex05_yset_custom_3.0.d2t  ex06_waveform_binary.d3b  ex06_waveform_binary.d3s  ex06_yset_binary_2.3.d2s  ex06_yset_binary_3.0.d2s  ex08_dynaspec_namespace.d3t  ex08_zset_dynaspec_2.3.d2t  ex08_zset_dynaspec_3.0.d2t  ex12_sounder_xyz.d3t  ex12_wset_sounder_2.3.d2t  ex12_wset_sounder_3.0.d2t  ex13_object_annotation.d3t  ex13_tfcat_3.0.d2t  ex13_vector_frame.d3b  ex13_z_annotation_2.3.d2t  ex14_ap_annotation_v3.0.d2x  ex14_lab_mag_3.0.d2x  ex14_object_tfcat.d3t  ex15_vector_document.d3x  ex15_vector_frame.d3b  ex16_mag_grid_doc.d3x  (+6 more)
