[project]
name = "das2py"
version = "3.0-pre1"
dependencies = [ "numpy>=1.16.6", "lxml" ]
description = "An efficient space physics data client for python"
readme = "README.md"
requires-python = ">=3.5"
license = {file = "LICENSE"}
authors = [
   {name = "C Piker", email = "cpiker@users.noreply.github.com"}
]
maintainers = [
	{name = "K Steele", email = "KaiwenS7@users.noreply.github.com"}
]
keywords = ["space-physics", "magneosphere", "das2"]

[project.urls]
Homepage = "https://das2.org/das2py"
Repository = "https://github.com/das-developers/das2py"

[project.scripts]
das_verify = "das2.verify:main"

[build-system]
#requires = [ "setuptools", "numpy>=2.0.0" ]
requires = [ "setuptools", "numpy>=2.0.0"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = ["das2", "das2.pycdf", "das2.xsd"]
