[project]
name = "das2py"
version = "3.0rc5"
dependencies = [ "numpy>=1.16.6", "lxml" ]
description = "An efficient space physics data client for python"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
   {name = "C Piker", email = "cpiker@users.noreply.github.com"}
]
maintainers = [
	{name = "K Steele", email = "KaiwenS7@users.noreply.github.com"}
]
keywords = ["space-physics", "magnetosphere", "das2"]

[project.urls]
Homepage = "https://das2.org/das2py"
Repository = "https://github.com/das-developers/das2py"

[project.scripts]
das_verify = "das2.verify:main"

[build-system]
#requires = [ "setuptools", "numpy>=2.0.0" ]
requires = [ "setuptools", "numpy>=1.16.0"]
build-backend = "setuptools.build_meta"

#[tool.setuptools]
#include-package-data = true
#packages = ["das2", "das2.pycdf", "_das2"]
