[metadata]
name = das2py
description = An efficient space physics data client for python
long_description = file: README.md
long_description_content_type = text/markdown
version = 2.3.0
author = C. Piker
author_email = cpiker@users.noreply.github.com
url = https://das2.org/das2py
license = MIT


[options]
packages = 
  das2
  das2.pycdf
python_requires = >=2.7
include_package_data = True
install_requires = 
   numpy
   lxml

